--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "soundswap-hub-backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "src/server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
