--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.0",
+    "micro-cors": "^0.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prisma": "^4.12.0",
-    "supertest": "^6.3.4"
+    "supertest": "^7.1.0"
   },
   "directories": {
     "lib": "lib",
