--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "dev": "node --experimental-modules server.js",
-    "debug": "node --experimental-modules --inspect server.js"
+    "dev": "node server.js",
+    "debug": "node --inspect server.js"
   },
   "dependencies": {
     "axios": "^1.10.0",
