--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "jest",
     "dev": "node server.js",
-    "debug": "node --inspect server.js"
+    "debug": "node --inspect server.js",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
     "axios": "^1.10.0",
