--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "node dev-server.js",
+    "start": "node dev-server.js",
+    "build": "echo 'No build step needed for Node.js'",
     "test": "node test-endpoints.js",
-    "debug-signup": "node debug-signup.js",
-    "start": "node dev-server.js"
+    "debug-signup": "node debug-signup.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
