--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,24 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/analytics.js": {
+      "runtime": "nodejs18.x"
+    },
+    "api/points.js": {
+      "runtime": "nodejs18.x"
+    },
+    "api/feedback.js": {
+      "runtime": "nodejs18.x"
+    },
+    "api/user.js": {
+      "runtime": "nodejs18.x"
+    },
+    "api/pairings.js": {
+      "runtime": "nodejs18.x"
+    },
+    "api/test.js": {
+      "runtime": "nodejs18.x"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.js"
-    }
-  ],
-  "env": {
-    "NODE_ENV": "production"
   }
 }
 
