fix: improve Firebase configuration for production

--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,10 @@
 {
   "version": 2,
-  "functions": {
-    "api/analytics.js": {
-      "runtime": "vercel-node@18.x"
-    },
-    "api/points.js": {
-      "runtime": "vercel-node@18.x"
-    },
-    "api/feedback.js": {
-      "runtime": "vercel-node@18.x"
-    },
-    "api/user.js": {
-      "runtime": "vercel-node@18.x"
-    },
-    "api/pairings.js": {
-      "runtime": "vercel-node@18.x"
-    },
-    "api/test.js": {
-      "runtime": "vercel-node@18.x"
-    }
-  }
+  "builds": [
+    { "src": "api/*.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
+  ]
 }
 
