--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    }
   ]
 }
 
