--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "soundswap-backend",
   "version": "1.0.0",
+  "description": "SoundSwap Backend API for email services and user management",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "dev": "node dev-server.js",
-    "start": "node dev-server.js",
-    "build": "echo 'No build step needed for Node.js'",
-    "test": "node test-endpoints.js",
-    "debug-signup": "node debug-signup.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "soundswap",
+    "music",
+    "email",
+    "api"
+  ],
+  "author": "SoundSwap Team",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
     "cors": "^2.8.5",
@@ -17,9 +25,14 @@
     "firebase-admin": "^11.0.0",
     "nodemailer": "^6.9.0",
     "validator": "^13.11.0",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "handlebars": "^4.7.8"
   },
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
