--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "firebase-admin": "^11.0.0",
-    "nodemailer": "^6.9.0",
-    "validator": "^13.11.0",
+    "handlebars": "^4.7.8",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
-    "handlebars": "^4.7.8"
+    "nodemailer": "^6.9.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
