--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "firebase-admin": "^11.0.0",
+    "google-trends-api": "^4.9.2",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
-    "nodemailer": "^6.9.0",
+    "nodemailer": "^7.0.10",
     "validator": "^13.11.0"
   },
   "devDependencies": {
