--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "test:trends": "node test-trends-api.js",
+    "test:production": "node scripts/production-test.js",
+    "test:all": "npm run test:trends && npm run test:production",
+    "deploy:check": "npm run test:all",
     "build": "echo 'No build step needed for Node.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
