--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.6.1",
     "express": "^4.18.0",
     "firebase-admin": "^11.0.0",
     "google-trends-api": "^4.9.2",
@@ -33,6 +33,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^7.0.10",
+    "snoowrap": "^1.15.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
