--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,15 @@
     }
   ],
   "routes": [
+
+    {
+      "src": "/api/(.*)",
+      "dest": "/src/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/api/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "/src/server.js"
