--- a/vercel.json
+++ b/vercel.json
@@ -7,14 +7,13 @@
     }
   ],
   "routes": [
-
     {
-      "src": "/api/(.*)",
-      "dest": "/src/api/$1"
+      "src": "/api/reddit-admin/(.*)",
+      "dest": "/src/server.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "/api/$1"
+      "src": "/api/(.*)",
+      "dest": "/src/server.js"
     },
     {
       "src": "/(.*)",
@@ -22,4 +21,3 @@
     }
   ]
 }
-
