--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "SoundSwap Team",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
