--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.10",
     "snoowrap": "^1.15.2",
     "validator": "^13.11.0"
