--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
       "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     },
     {
-      "src": "/api/email/(.*)",
+      "src": "/api/send-welcome-email/(.*)",
       "dest": "/server.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     },
