--- a/vercel.json
+++ b/vercel.json
@@ -31,7 +31,7 @@
   "crons": [
     {
       "path": "/api/reddit-admin/cron",
-      "schedule": "*/2 * * * *"
+      "schedule": "0 9 * * *"
     }
   ]
 }
