--- a/.github/workflows/reddit-automation.yml
+++ b/.github/workflows/reddit-automation.yml
@@ -1,10 +1,12 @@
 name: Reddit Automation Engine
 on:
   schedule:
-    # Run every 2 minutes during active hours (8 AM - 6 PM America/New_York)
-    # UTC time: 12:00-22:00 = 8:00-18:00 America/New_York
-    - cron: '*/2 12-22 * * *'
-  workflow_dispatch:  # Allow manual triggering
+   schedule:
+    # Run every 2 minutes during ACTIVE EST hours (8 AM - 10 PM America/New_York)
+    # UTC conversion: 13:00-03:00 (next day)
+    - cron: '*/2 13-23 * * *'  # 13:00-23:59 UTC = 8:00-18:59 EST
+    - cron: '*/2 0-3 * * *'    # 00:00-03:00 UTC = 19:00-22:00 EST
+  workflow_dispatch:
     inputs:
       debug:
         description: 'Run in debug mode'
