--- a/.github/workflows/reddit-automation.yml
+++ b/.github/workflows/reddit-automation.yml
@@ -1,10 +1,8 @@
 name: Reddit Automation Engine
 on:
   schedule:
-    # Run every 2 minutes during ACTIVE EST hours (8 AM - 10 PM America/New_York)
-    # UTC conversion: 13:00-03:00 (next day)
-    - cron: '*/2 13-23 * * *'  # 13:00-23:59 UTC = 8:00-18:59 EST
-    - cron: '*/2 0-3 * * *'    # 00:00-03:00 UTC = 19:00-22:00 EST
+    # Run every 2 minutes - let the backend handle timezone logic
+    - cron: '*/2 * * * *'
   workflow_dispatch:
     inputs:
       debug:
