--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.0",
+    "firebase": "^11.10.0",
     "firebase-admin": "^11.0.0",
     "google-trends-api": "^4.9.2",
     "handlebars": "^4.7.8",
