--- a/package.json
+++ b/package.json
@@ -24,18 +24,24 @@
   "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@huggingface/inference": "^2.6.2",
     "axios": "^1.13.2",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.0",
     "firebase": "^11.10.0",
     "firebase-admin": "^11.0.0",
+    "form-data": "^4.0.0",
     "google-trends-api": "^4.9.2",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.10",
+    "replicate": "^1.4.0",
     "snoowrap": "^1.15.2",
+    "twitter-api-v2": "^1.28.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
