--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.0",
+    "express-rate-limit": "^8.2.1",
     "firebase": "^11.10.0",
     "firebase-admin": "^11.0.0",
     "form-data": "^4.0.0",
