--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
+    "micro": "^10.0.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.10",
     "replicate": "^1.4.0",
