--- a/vercel.json
+++ b/vercel.json
@@ -1,45 +1,33 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node",
-      "config": {
-        "maxDuration": 30,
-        "memory": 2048
-      }
+  "functions": {
+    "backend/server.js": {
+      "maxDuration": 60,
+      "memory": 2048
     },
-    {
-      "src": "api/generate-video.js",
-      "use": "@vercel/node",
-      "config": {
-        "maxDuration": 300,
-        "memory": 4096,
-        "runtime": "nodejs18.x"
-      }
+    "backend/routes/generate-video.js": {
+      "maxDuration": 300,
+      "memory": 4096,
+      "runtime": "nodejs18.x"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api/generate-video/(.*)",
-      "dest": "/api/generate-video.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
+      "dest": "backend/routes/generate-video.js",
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Date, X-Api-Version",
-        "Access-Control-Allow-Credentials": "true"
+        "Access-Control-Allow-Headers": "Content-Type, Authorization"
       }
     },
     {
       "src": "/api/(.*)",
-      "dest": "/server.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+      "dest": "backend/server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/server.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+      "dest": "backend/server.js"
     }
   ],
   "regions": ["iad1"]
