--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nodemailer": "^7.0.10",
     "replicate": "^1.4.0",
     "snoowrap": "^1.15.2",
+    "standardwebhooks": "^1.0.0",
     "twitter-api-v2": "^1.28.0",
     "validator": "^13.11.0"
   },
