--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.10",
     "replicate": "^1.4.0",
+    "sharp": "^0.34.5",
     "snoowrap": "^1.15.2",
     "standardwebhooks": "^1.0.0",
     "twitter-api-v2": "^1.28.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "web-audio-beat-detector": "^8.2.33"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
