--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@huggingface/inference": "^2.6.2",
     "axios": "^1.13.2",
     "buffer": "^6.0.3",
+    "canvas": "^3.2.1",
     "cors": "^2.8.5",
     "dodopayments": "^2.14.2",
     "dotenv": "^16.6.1",
