--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "canvas": "^3.2.1",
     "cors": "^2.8.5",
     "dodopayments": "^2.14.2",
+    "dodopayments-checkout": "^1.7.2",
     "dotenv": "^16.6.1",
     "express": "^4.18.0",
     "express-rate-limit": "^8.2.1",
